# moon-bindgen

./: .gitmodules  Cargo.toml  LICENSE  README.md  README_JA.md
.github/workflows/: test-and-lint.yml
crates/moon_bindgen/: Cargo.toml
crates/moon_bindgen/src/: generate.rs  ident.rs  lib.rs  model.rs  parse.rs  stub.rs
sandbox/: lz4_ffi.mbt  lz4_ffi_stub.c  lz4_ffi_test.mbt  moon.mod  moon.pkg  my_add_ffi.mbt  pkg.generated.mbti  struct_api.c  struct_ffi.mbt  struct_ffi_stub.c  struct_ffi_test.mbt  stub.c
sandbox/bindgen/: Cargo.toml  build.rs
sandbox/bindgen/src/: lib.rs  struct_ffi.rs
